[options]
install_requires=
    cryptography
    nsenter
    pytest
    pytest-tap
    scapy
    waiting

[options.extras_require]
dev =
    black
    isort
    mypy
    pip-tools
    pre-commit
    tox

[tox:tox]
envlist = py3

[testenv]
commands = pytest {posargs}
deps = -rrequirements.txt

[metadata]
name = tcp-authopt-test
version = 0.1

[mypy]
ignore_missing_imports = true
files = .

[isort]
profile = black
